--- a/ansible-dev/Jenkinsfile
+++ b/ansible-dev/Jenkinsfile
@@ -5,8 +5,12 @@ pipeline{
         stage('zip the file'){
             steps{
                 sh 'zip -r ansible-dev_${BUILD_ID}.zip * --exclude Jenkinsfile'
-                sh 'ls -l'
             }
+        }
+        stage('upload artifact to Jfrog'){
+            sh 'curl -uadmin:AP8JrETP4pkpQEdKpLHxJwhVieo -T \
+            ansible-dev_${BUILD_ID}.zip\
+            "http://34.229.74.74:8081/artifactory/ansible/ansible-dev_${BUILD_ID}.zip"'
         }
     }
 }
