--- a/ansible-dev/Jenkinsfile
+++ b/ansible-dev/Jenkinsfile
@@ -8,9 +8,11 @@ pipeline{
             }
         }
         stage('upload artifact to Jfrog'){
+            steps{
             sh 'curl -uadmin:AP8JrETP4pkpQEdKpLHxJwhVieo -T \
             ansible-dev_${BUILD_ID}.zip\
             "http://34.229.74.74:8081/artifactory/ansible/ansible-dev_${BUILD_ID}.zip"'
-        }
+            }
+        }    
     }
 }
