--- a/ansible-dev/Jenkinsfile
+++ b/ansible-dev/Jenkinsfile
@@ -13,6 +13,17 @@ pipeline{
             ansible-dev_${BUILD_ID}.zip\
             "http://34.229.74.74:8081/artifactory/ansible/ansible-dev_${BUILD_ID}.zip"'
             }
-        }    
+        }
+        stage('publish to ansible server'){
+            steps{
+                sshPublisher(publishers: [sshPublisherDesc(configName: 'AnsibleServer', \
+                transfers: [sshTransfer(cleanRemote: false, excludes: '', execCommand: \
+                'ls', execTimeout: 120000, flatten: false, makeEmptyDirs: false, \
+                noDefaultExcludes: false, patternSeparator: '[, ]+', remoteDirectory: \
+                '/home/ec2-user', remoteDirectorySDF: false, removePrefix: '', \
+                sourceFiles: 'ansible-dev_${BUILD_ID.}zip')], usePromotionTimestamp: false, \
+                useWorkspaceInPromotion: false, verbose: false)])
+            }
+        }   
     }
 }
