--- a/ansible-dev/Jenkinsfile
+++ b/ansible-dev/Jenkinsfile
@@ -20,10 +20,11 @@ pipeline{
                 transfers: [sshTransfer(cleanRemote: false, excludes: '', execCommand: \
                 'ls', execTimeout: 120000, flatten: false, makeEmptyDirs: false, \
                 noDefaultExcludes: false, patternSeparator: '[, ]+', remoteDirectory: \
-                '/home/ec2-user', remoteDirectorySDF: false, removePrefix: '', \
+                '.', remoteDirectorySDF: false, removePrefix: '', \
                 sourceFiles: 'ansible-dev_${BUILD_ID.}zip')], usePromotionTimestamp: false, \
                 useWorkspaceInPromotion: false, verbose: false)])
-            }
+
+    
         }   
     }
 }
