--- a/ansible-dev/Jenkinsfile
+++ b/ansible-dev/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline{
             steps{
                 sshPublisher(publishers: [sshPublisherDesc(configName: 'AnsibleServer', \
                 transfers: [sshTransfer(cleanRemote: false, excludes: '', execCommand: \
-                'ls', execTimeout: 120000, flatten: false, makeEmptyDirs: false, \
+                'unzip -o ansible-dev_${BUILD_ID.}zip; rm -rf ansible-dev_${BUILD_ID.}zip', execTimeout: 120000, flatten: false, makeEmptyDirs: false, \
                 noDefaultExcludes: false, patternSeparator: '[, ]+', remoteDirectory: \
                 '.', remoteDirectorySDF: false, removePrefix: '', \
                 sourceFiles: 'ansible-dev_${BUILD_ID.}zip')], usePromotionTimestamp: false, \
